dark mode bug fix

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1052,10 +1052,8 @@ footer {
 
 /* main form - mobile first */
 .part {
-  display: -ms-grid;
   display: grid;
-  -ms-grid-columns: (1fr)[6];
-      grid-template-columns: repeat(6, 1fr);
+  grid-template-columns: repeat(6, 1fr);
 }
 
 .part-title {
@@ -1359,7 +1357,8 @@ form select:invalid {
     display: grid;
     -ms-grid-columns: 2fr 1fr;
         grid-template-columns: 2fr 1fr;
-        grid-template-areas: "left-content checkout-panel" "control-panel checkout-panel";
+        grid-template-areas: "left-content checkout-panel"
+ "control-panel checkout-panel";
     margin-top: -30px;
   }
   #main-content .left-content {
